--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.17.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "heroku": "^7.56.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12"
